# ai-crypto-claw

./: .gitignore  README.md  vercel.json
engine/: README.md  pyproject.toml
engine/crypto_claw_engine/: __init__.py  __main__.py  cli.py  errors.py  llm.py  models.py
engine/crypto_claw_engine/agents/: __init__.py  base.py  debate.py  derivatives.py  portfolio_manager.py  reflection.py  tail_risk.py  technicals.py
engine/crypto_claw_engine/config/: agents.yaml
engine/crypto_claw_engine/data/: base.py  binance.py  coingecko.py
engine/crypto_claw_engine/graph/: dag_runner.py  runner.py
engine/crypto_claw_engine/memory/: trade_journal.py
engine/tests/: conftest.py  test_agent_base.py  test_agent_derivatives.py  test_agent_portfolio_manager.py  test_agent_tail_risk.py  test_agent_technicals.py  test_cli.py  test_data_base.py  test_data_binance.py  test_data_coingecko.py  test_graph_runner.py  test_live_golden_path.py  test_llm.py  test_models.py  test_smoke.py
engine/tests/fixtures/: binance_funding_btc.json  binance_klines_btc.json  binance_oi_btc.json  coingecko_markets.json  coingecko_simple_price.json
hermes-profiles/jingyao/: SOUL.md
hermes-profiles/template/: SOUL.md
trading/: .env.example  bot.db  config.py  requirements.txt  server.py
trading/routers/: admin_router.py
trading/strategies/: dca.py  grid.py
trading/templates/: account.html  base.html  commands.html  index.html  login.html  user_dashboard.html
trading/utils/: ai_advisor.py  crypto.py  database.py  exchange.py  notifier.py
web/: package.json  pnpm-lock.yaml  vercel.json
(+26 files in other folders)
