[project]
name = "crypto-claw-engine"
version = "0.1.0"
description = "Crypto-first council of AI analysts — engine package"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta>=0.11",
    "langgraph>=0.2",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
crypto-claw = "crypto_claw_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crypto_claw_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits real external APIs (requires network)",
]
